<resources>
    <string name="hello">Hello World, Youa!</string>
    <string name="img">Image</string>
    <string name="feed_friend_title">好友动态</string>
    <string name="feed_circum_title">周边动态</string>
    <string name="feed_friend_manager_input_hint">输入搜索内容</string>
    <string name="feed_friend_manager_recommend">达人推荐</string>
    <string name="feed_friend_manager_addfriend">添加好友</string>
    <string name="feed_friend_manager_attentioned">已关注(0)</string>
    <string name="feed_refresh">正在获取新内容…</string>
    <string name="feed_refresh_null">暂时没有更新</string>
    <string name="feed_theme_collection_null">话题收藏列表暂时没有更新</string>
    <string name="feed_circum_collection_null">地点收藏列表暂时没有更新</string>
    <string name="feed_friend_content">正文页数据为空</string>
    <string name="feed_theme_collection_delete_success">删除成功</string>
    <string name="feed_theme_collection_delete_fail">删除失败</string>
    <string name="feed_theme_null">这里是空的，去热门话题找找看？</string>
    <string name="feed_circum_null">未设置任何周边</string>
    <string name="feed_like_sucess">喜欢成功</string>
    <string name="feed_like_fail">喜欢失败</string>
    <string name="feed_like_ed">已喜欢过了</string>
    <string name="feed_cancel_like">取消喜欢</string>
    <string name="feed_like_origin_deleted">原帖已被删除</string>
    <string name="feed_take_theme">添加</string>
    <string name="feed_null">无相关动态</string>
    <string name="feed_from_net">"来自爱乐活社区"</string>
    <string name="feed_from_android">"来自android客户端"</string>
    <string name="feed_from_apple">"来自iphone客户端"</string>
    <string name="feed_newed">"目前更新已经是最新内容"</string>
    <string name="feed_get_string">"获取到"</string>
    <string name="feed_share_string">"条新分享"</string>
    <string name="feed_theme_cancel">"是否确定取消关注该话题!"</string>
    <string name="yes">"是"</string>
    <string name="no">"否"</string>
    <string name="feed_content_like">"喜欢"</string>
    <string name="feed_deleted">"该贴已被删除"</string>
    <string name="feed_reply_string">"回复@"</string>
    <string name="feed_back_home">"回到主页"</string>
    <string name="feed_exit">"退出"</string>
    <string name="label_all">全部%1$s</string>
    <string name="app_name">乐活分享</string>
    <string name="common_null_space" />
    <string name="common_network_error">网络异常, 请稍候重试</string>
    <string name="common_network_not_available">网络未连接</string>
    <string name="common_hint">提示</string>
    <string name="common_requesting_server">正在请求服务器…</string>
    <string name="common_ok">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_know">知道了</string>
    <string name="common_next">下一步</string>
    <string name="common_prev">上一步</string>
    <string name="common_complate">完成</string>
    <string name="common_return">返回</string>
    <string name="common_save">保存</string>
    <string name="common_time_minite_before">分钟前</string>
    <string name="common_time_second_before">秒前</string>
    <string name="common_time_yesterday">昨天</string>
    <string name="common_time_before_yesterday">昨天</string>
    <string name="common_time_today">今天</string>
    <string name="common_time_month">月</string>
    <string name="common_time_day">日</string>
    <string name="common_error_lbl">错误</string>
    <string name="common_error_unknow">哎呀，网络不给力呀</string>
    <string name="common_error_antispam">你的输入出现敏感词汇</string>
    <string name="common_error_power">你无权进行此操作</string>
    <string name="common_error_bfilter">你的操作太频繁</string>
    <string name="common_error_deny">你的本次操作被禁止</string>
    <string name="common_error_input">参数错误</string>
    <string name="common_error_oldversion">客户端版本过老，需要升级</string>
    <string name="common_error_input_null">请输入%s</string>
    <string name="common_error_select_null">请选择%s</string>
    <string name="common_error_too_long">请选择%s</string>
    <string name="common_error_filenotfound">文件没有发现</string>
    <string name="common_error_nospace">没有发现SD卡或空间不足</string>
    <string name="common_error_password_error_gotologin">密码错误，需要重新登录</string>
    <string name="common_error_download_fail_server">下载失败(不能链接服务器)，请稍后再试</string>
    <string name="common_error_download_fail_local">下载失败(没有sdcard或空间不足)</string>
    <string name="common_error_old_version">你使用的版本过老，请升级</string>
    <string name="common_fatal_error_title">提示</string>
    <string name="common_fatal_error_content">检测到客户端发生未知错误，给你带来不便很抱歉</string>
    <string name="common_download_cancel">下载取消</string>
    <string name="common_upload_fail">上传失败</string>
    <string name="common_upload_cancel">上传取消</string>
    <string name="common_upload_cancel_byuser">你取消了上传操作</string>
    <string name="common_filezize_zero">文件大小为0</string>
    <string name="common_getgps_fail">获取gps失败</string>
    <string name="common_getgps_cancel">获取gps取消</string>
    <string name="common_listview_searchhint_pull">下拉刷新</string>
    <string name="common_listview_last_refresh">上次更新:%1$s</string>
    <string name="common_listview_searchhint_push">松开刷新</string>
    <string name="common_listview_loading">正在刷新</string>
    <string name="common_listview_viewmore">点击查看更多</string>
    <string name="common_upgrade_title">升级%s</string>
    <string name="common_force_upgrade_title">新版本有重要更新，若不升级可能不能正常使用，请立即更新\n\n</string>
    <string name="common_force_upgrade_button_ok">现在更新</string>
    <string name="common_force_upgrade_button_retry">重试</string>
    <string name="common_force_upgrade_button_exit">退出程序</string>
    <string name="common_force_upgrade_button_cancel">取消更新</string>
    <string name="common_force_upgrade_button_background">放入后台</string>
    <string name="common_upgrade_downloading_title">正在下载%s</string>
    <string name="common_upgrade_downloadfile">升级下载失败</string>
    <string name="common_upgrade_hasnot_version">已经是最新版本</string>
    <string name="common_upgrade_downloading">正在下载</string>
    <string name="common_upgrade_install_hint">下载完成，点击安装</string>
    <string name="test_username_or_password_error_text">帐号或密码错误</string>
    <string name="login_login">登录</string>
    <string name="login_wait">请稍候</string>
    <string name="login_regist">注册</string>
    <string name="login_wrong_username">错误的用户名</string>
    <string name="login_wrong_password">错误的密码</string>
    <string name="login_not_match">错误的用户名或密码</string>
    <string name="login_fail">登录失败</string>
    <string name="login_username_default">邮箱/手机号</string>
    <string name="login_password_default">6~20位字符</string>
    <string name="login_nickname_default">4~30位字符</string>
    <string name="login_lable_account">帐号   </string>
    <string name="login_lable_password">密码    </string>
    <string name="unopened">此功能暂未开放，敬请期待！</string>
    <string name="hot_topic">热门话题</string>
    <string name="hot_share">热门分享</string>
    <string name="daren_hall">达人秀</string>
    <string name="them_talking">他们正在说</string>
    <string name="commend_share">推荐分享</string>
    <string name="login_binding_leho_account">绑定已有乐活帐号</string>
    <string name="login_third_userinfo_confirm">个人信息确认</string>
    <string name="login_binding_lable">绑定</string>
    <string name="login_preview_leho">逛逛乐活社区</string>
    <string name="login_account_sina">使用微博帐号登录</string>
    <string name="login_account_qq">使用 QQ 帐号登录</string>
    <string name="login_account_renren">使用人人帐号登录</string>
    <string name="login_account_baidu">使用百度帐号登录</string>
    <string name="login_account_leho">使用乐活账号登录</string>
    <string name="login_third_fail">登录失败！</string>
    <string name="login_third_webview_loading">请稍候…</string>
    <string name="login_third_fail_unauthed">登录失败,第三方未授权！</string>
    <string name="login_third_binded_login">此帐号已登录过乐活，将直接登录！</string>
    <string name="login_checking_third_account">正在检查用户</string>
    <string name="login_third_first_login">你第一次登录，请补充个人信息</string>
    <string name="login_third_login_fail">登录失败，请重新登录！</string>
    <string name="login_third_reg_uname_error">用户名重复或不合法，请更改</string>
    <string name="login_third_reglocal_third_used">此第三方帐号已注册过乐活！</string>
    <string name="third_oauth_fail_access_denied">用户或授权服务器拒绝授予数据访问权限</string>
    <string name="third_get_oauth_fail">获取第三方授权信息失败，请重试!</string>
    <string name="login_third_loginng">正在为你登录LeHo社区</string>
    <string name="third_bind_conflict">该帐号已绑定过其他乐活帐号</string>
    <string name="user_has_binded_one">你已经绑定过一个帐号，请解除现有绑定帐号再进行绑定</string>
    <string name="account_not_existed">用户不存在</string>
    <string name="user_donot_has_the_third">没绑定过该第三方的帐号</string>
    <string name="user_has_no_local_account">第三方账号登录，无法解除绑定</string>
    <string name="bind_success">绑定成功！</string>
    <string name="unbind_success">解除绑定成功！</string>
    <string name="only_binded_one">当前仅支持一个帐号的绑定，如绑定其他帐号，请解除现有绑定帐号再进行绑定</string>
    <string name="third_bind_expried">(过期)</string>
    <string name="third_bind_notsame_account">该授权账号与绑定乐活的账号不一致!</string>
    <string name="sns_share_title">%s的分享 爱乐活-发现你对生活的热爱</string>
    <string name="ileho_caption">爱乐活-发现你对生活的热爱</string>
    <string name="share_to_title">分享到</string>
    <string name="share_fail">分享到%s失败!</string>
    <string name="share_success">分享成功!</string>
    <string name="share_sns_fail_msg">分享到%1$s失败%2$s</string>
    <string name="share_sns_success">%s分享成功!</string>
    <string name="sns_renren">人人网</string>
    <string name="sns_weixin">微信</string>
    <string name="sns_sina">新浪微博</string>
    <string name="sns_qqzone">QQ空间</string>
    <string name="sns_baidu">百度</string>
    <string name="no_prefer">目前还没有添加喜欢</string>
    <string name="no_share">目前还没有添加分享</string>
    <string name="no_self_publish">目前还没有没有发布任何帖子</string>
    <string name="no_history">目前还没有最近浏览</string>
    <string name="not_login">您还没有登录爱乐活</string>
    <string name="sns_shareding">正在同步分享&#8230;</string>
    <string name="sns_share_data_null">,无法获取要分享的内容！</string>
    <string name="sns_share_getbindinfo_fail">,获取绑定信息失败！</string>
    <string name="sns_share_same_weibo">,短时间内不允许发布相同的微博！</string>
    <string name="sns_share_too_more">,分享次数超过限制！</string>
    <string name="sns_auth_expired">,授权绑定已过期！</string>
    <string name="sns_auth_no_bind_expired">,未绑定或已过期！</string>
    <string name="sns_share_fail_unknow">,未知错误！</string>
    <string name="regist_regist">注册</string>
    <string name="regist_wait">请稍候…</string>
    <string name="regist_fail">注册失败!</string>
    <string name="regist_registed">号码已被注册,请更换手机号码!</string>
    <string name="regist_success">注册成功，正在登录!</string>
    <string name="regist_error_getvcode">获取验证码失败!</string>
    <string name="regist_success_getvcode">获取验证码成功,请等待短信验证码!</string>
    <string name="mobile_number">手机号码</string>
    <string name="mobile_validation_number">手机验证码</string>
    <string name="regist_get_validation_code">获取验证码</string>
    <string name="regist_reget_validation_code">重新获取</string>
    <string name="regist_input_validation_code">请输入验证码</string>
    <string name="regist_vcode">验证码</string>
    <string name="regist_password">设置密码</string>
    <string name="regist_confirm_password">重复密码</string>
    <string name="regist_nickname">昵称</string>
    <string name="regist_sex">性别</string>
    <string name="regist_sex_female">女</string>
    <string name="regist_sex_male">男</string>
    <string name="regist_address">所在地</string>
    <string name="regist_regist_lable">注册</string>
    <string name="regist_title">手机注册</string>
    <string name="regist_error_vcode">请填写手机验证码</string>
    <string name="regist_error_phonenumble">请正确填写手机号码</string>
    <string name="regist_error_password">请正确填写密码(6~20)</string>
    <string name="regist_error_conpassword">两次输入密码不一致</string>
    <string name="regist_error_nickname">请正确填写昵称(4~30字符)</string>
    <string name="information_sex">性别</string>
    <string name="information_address">所在地</string>
    <string name="information_man">男</string>
    <string name="information_woman">女</string>
    <string name="information_nickname">昵称</string>
    <string name="consume_people">消费人数</string>
    <string name="consume_price">消费总额 （单位：元）</string>
    <string name="consume_price_hint">请输入价格 </string>
    <string name="reg_accout">注册一个乐活账号</string>
</resources>