<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/common_bg_bit">
    <RelativeLayout style="@style/title_total">
		<Button 
			android:id="@+id/back"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/common_back_selector"/>
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
			android:layout_toRightOf="@+id/back"
			android:layout_toLeftOf="@+id/skip"
			android:layout_marginTop="2dip">
			<TextView 
				android:id="@+id/title" 
				style="@style/input_title_text"
				android:text="@string/login_binding_leho_account"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"/>
		</LinearLayout>
		<Button 
			android:id="@+id/skip" 
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/common_skip_selector"/>
	</RelativeLayout>

    <LinearLayout android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="16dp"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:background="@drawable/login_edittext_bg">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<EditText android:id="@+id/username"
				android:background="@null"
				android:paddingLeft="70.0dp"
				android:saveEnabled="true"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:textSize="18sp"
				android:textColor="#333333"
				android:hint="@string/login_username_default"
				android:singleLine="true"/>
            <TextView android:textSize="18sp"
            	android:textColor="#333333"
				android:gravity="center_vertical"
				android:id="@+id/lable_account"
				android:paddingLeft="15.0sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="15.0sp"
				android:text="@string/login_lable_account"
				android:layout_alignLeft="@+id/username"
				android:layout_alignTop="@+id/username"
				android:layout_alignBottom="@+id/username" />        
		</RelativeLayout>
		<ImageView android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:background="@drawable/feed_line" 
			android:scaleType="fitCenter"/>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<EditText android:id="@+id/password"
				android:background="@null"
				android:paddingLeft="70.0dp"
				android:saveEnabled="true"
				android:layout_width="fill_parent"
				android:layout_height="45dp"
				android:textSize="18sp"
				android:textColor="#333333"
				android:singleLine="true"
				android:password="true" 
				android:maxEms="20"
				android:minEms="6"
				android:hint="@string/login_password_default"/>
			<TextView android:textSize="18sp"
            	android:textColor="#333333"
				android:gravity="center_vertical"
				android:id="@+id/lable_password"
				android:paddingLeft="15.0sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="15.0sp"
				android:text="@string/login_lable_password"
				android:layout_alignLeft="@+id/password"
				android:layout_alignTop="@+id/password"
				android:layout_alignBottom="@+id/password" />
		</RelativeLayout>
	</LinearLayout>
    <RelativeLayout 
		android:id="@+id/LinearLayout02"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp">
		<Button android:id="@+id/binding"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:background="@drawable/login_login_btn_selector"
			android:textSize="20sp"
			android:textColor="#FFF"
			android:layout_marginBottom="16dp"
			android:text="@string/login_binding_lable"/>
	</RelativeLayout>
</LinearLayout>