<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/common_bg_bit">
    <RelativeLayout style="@style/title_total">
		<Button 
			android:id="@+id/back"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/common_back_selector"/>
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
			android:gravity="center"
			android:layout_toRightOf="@+id/back"
			android:layout_toLeftOf="@+id/reg_third_user"
			android:layout_marginTop="2dip">
			<TextView 
				android:id="@+id/title" 
				style="@style/input_title_text"
				android:text="@string/login_third_userinfo_confirm"/>
		</LinearLayout>
		<Button 
			android:id="@+id/reg_third_user" 
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/common_done_selector"/>
	</RelativeLayout>
	<ScrollView android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
	  		android:layout_width="wrap_content"
		    android:layout_height="wrap_content">

	<RelativeLayout
	    android:layout_width="fill_parent" 
	    android:layout_height="45dip"	    
	    android:orientation="horizontal" 
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:layout_marginTop="2dip"
	    android:background="@drawable/information_kuang">
	    <TextView android:id="@+id/nickname_lable"
		    android:layout_width="90dip" 
	        android:layout_height="wrap_content"
	         android:textSize="@dimen/information_content_size"
	        android:text="@string/information_nickname"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dip"
	        android:textColor="@color/information_black"
	        android:layout_centerVertical="true"/>
	    <EditText
	        android:id="@+id/user_nickname"
	        android:layout_toRightOf="@+id/nickname_lable"
	        android:layout_gravity="center_vertical"
	        android:textSize="@dimen/information_content_size"
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@null"
	        android:textColor="@color/information_gray"
	        android:layout_centerVertical="true"
	        android:imeOptions="actionNext"
	        android:hint="@string/login_nickname_default"
	        android:singleLine="true"
	        />
	</RelativeLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="45dip"
	    android:orientation="horizontal" 
	    android:layout_marginTop="16dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:background="@drawable/information_kuang" >
	    <TextView
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:text="@string/information_sex"
            android:textColor="@color/information_black"
            android:textSize="19sp" />
	    <RadioGroup
	        android:id="@+id/user_sex"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:orientation="horizontal" >
			<RadioButton
			    android:id="@+id/user_sex_man"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:layout_gravity="center_vertical"
			    android:layout_marginRight="40dip"
			    android:button="@drawable/information_radio_button_bg"
			    android:text="@string/information_man"
			    android:textColor="@color/information_gray"
			    android:textSize="@dimen/information_content_size"
			    android:checked="true"/>
			<RadioButton
                android:id="@+id/user_sex_womain"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:button="@drawable/information_radio_button_bg"
                android:text="@string/information_woman"
                android:textColor="@color/information_gray"
                android:textSize="@dimen/information_content_size"/>
	    </RadioGroup>
	</LinearLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="45dip"	    
	    android:orientation="horizontal" 
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:layout_marginTop="16dip"
	    android:background="@drawable/information_kuang">
	    <TextView android:id="@+id/address_lable"
		    android:layout_width="90dip" 
	        android:layout_height="wrap_content"
	         android:textSize="@dimen/information_content_size"
	        android:text="@string/information_address"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dip"
	        android:textColor="@color/information_black"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:id="@+id/user_address"
	        android:layout_toRightOf="@+id/address_lable"
	        android:layout_gravity="center_vertical"
	        android:textSize="@dimen/information_content_size"
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@null"
	        android:textColor="@color/information_gray"
	        android:layout_centerVertical="true"
	        android:imeOptions="actionNext"
	        android:singleLine="true"
	        android:ellipsize="marquee"
	        />	  
	</RelativeLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>